[package]
name = "fragshare_amm"
version = "0.1.0"
description = "Yield-Adjusted AMM for real estate fractions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fragshare_amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
