[package]
name = "fragshare_lending"
version = "0.1.0"
description = "Fraction-Collateralized CDP Protocol for real estate"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fragshare_lending"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
